# projetINF8703

./: README.md
Builds/Linux/: Makefile
Builds/VisualStudio2013/: SimpleSynthesisDemo.sln  SimpleSynthesisDemo.vcxproj  SimpleSynthesisDemo.vcxproj.filters  resources.rc
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: CMakeLists.txt  Envelope.cpp  Envelope.h  EnvelopeGUI.h  Filter.cpp  Filter.h  FilterGUI.cpp  FilterGUI.h  Main.cpp  MainComponent.cpp  Midi.cpp  Midi.h  Oscillateur.cpp  Oscillateur.h  OscillatorGUI.h  Synthesizer.cpp  Synthesizer.h  Voice.cpp  Voice.h  VoicesVector.cpp  VoicesVector.h
